Fixed alignment bug in lost.php

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -56,7 +56,6 @@ a:hover {
   text-align: center;
   color: #e6e3e1;
   position: relative;
-  margin: 0 10px;
   font-family: "pragmatica-web", helvetica, arial, sans-serif;
   font-weight: 600;
   font-size: 18px;
@@ -83,7 +82,6 @@ a:hover {
   text-align: center;
   color: #e6e3e1;
   position: relative;
-  margin: 0 10px;
   font-family: "pragmatica-web", helvetica, arial, sans-serif;
   font-weight: 600;
   font-size: 18px;
